# botchan-pip

./: .counter.toml  LICENSE  README.md  setup.py
counter/: __init__.py  check.py  main.py
tweet-counter/: README.md  entry_points.cfg  setup.cfg
tweet-counter/counter/: check.py  config.py  main.py
