[metadata] 
name = counter
version = attr:counter.__version__
author = Fal318
author_email = fal.falco318@gmail.com
description = Counter
long_description = file:README.md
url = https://github.com/Fal318/Tweetbot-pip
license =  MIT LICENSE
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
install_requires = 
    requests_oauthlib
    toml
entry_points = file:entry_points.cfg
